# sqlmodel

./: .coverage.brapaport-0661.40902.224738  .coverage.brapaport-0661.42036.801973  .coverage.brapaport-0661.42492.877246  .coverage.brapaport-0661.43851.018302  .coverage.brapaport-0661.44269.283047  .coverage.brapaport-0661.44591.701709  .coverage.brapaport-0661.44966.241012  .coverage.brapaport-0661.45711.191491  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  example.py  mkdocs.insiders.yml  mkdocs.maybe-insiders.yml  mkdocs.yml  noxfile.py  pdm_build.py  pyproject.toml  requirements-docs-tests.txt  requirements-docs.txt  requirements-tests.txt  test_hybrid_property.py  test_relationships_update.py
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature-request.yml  privileged.yml  question.yml
.github/actions/comment-docs-preview-in-pr/: Dockerfile
.github/actions/watch-previews/: Dockerfile  action.yml
.github/workflows/: build-docs.yml  bump-pre-commit-hooks.yml  create-draft-release.yml  deploy-docs.yml  guard-dependencies.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  preview-docs.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml  zizmor.yml
data/: members.yml  sponsors.yml
docs/: alternatives.md  contributing.md  databases.md  db-to-code.md  environment-variables.md  features.md  help.md  index.md  install.md  management-tasks.md  management.md  missing-translation.md  release-notes.md  virtual-environments.md
docs/about/: index.md
docs/advanced/: async-tools.md  async.md  asyncio.md  change-default-type-mapping.md  column-types.md  constraints.md  decimal.md  encrypted-type.md  index.md  migrations.md  pydantic-json-type.md  pydantic-jsonb.md  sa-column.md  self-referential.md  uuid.md
docs/advanced/advanced-relationships/: index.md  self-referential.md
docs/async/: tutorial.md
docs/en/: mkdocs.yml
docs/en/docs/: contributing.md  databases.md
docs/img/databases/: external-server.drawio  multiple-servers.drawio  relationships.drawio  same-server.drawio  single-file.drawio
docs/img/db-to-code/: mapper.drawio
docs/js/: termynal.js
docs/learn/: index.md
docs/overrides/: main.html
docs/tutorial/: automatic-id-none-refresh.md  code-structure.md  create-db-and-table-with-db-browser.md  create-db-and-table.md  delete.md  encrypted-type.md  index.md  indexes.md  insert.md  limit-and-offset.md  one.md  select.md  str-fields-and-column-length.md  update.md  where.md
docs/tutorial/async/: index.md
docs/tutorial/connect/: create-connected-rows.md  create-connected-tables.md  index.md  read-connected-data.md  remove-data-connections.md  update-data-connections.md
docs/tutorial/fastapi/: delete.md  index.md  limit-and-offset.md  multiple-models.md  read-one.md  relationships.md  response-model.md  session-with-dependency.md  simple-hero-api.md  teams.md  tests.md  update-extra-data.md  update.md
docs/tutorial/many-to-many/: create-data.md  create-models-with-link.md  index.md  link-with-extra-fields.md  update-remove-relationships.md
docs/tutorial/relationship-attributes/: aliased-relationships.md  back-populates.md  cascade-delete-relationships.md  create-and-update-relationships.md  define-relationships-attributes.md  index.md  multiple-relationships-same-model.md  ondelete-relationship.md  read-relationships.md  remove-relationships.md  type-annotation-strings.md
docs_src/advanced/asyncio/: tutorial001.py  tutorial001_py36.py
docs_src/advanced/column_types/: tutorial001.py  tutorial002.py  tutorial003.py
docs_src/advanced/constraints/: __init__.py  (+5 more)
docs_src/tutorial_async/: .python-version
scripts/: deploy_docs_status.py  docs-live.sh  docs.py  format.sh  generate_select.py  lint.sh  mkdocs_hooks.py  publish.sh  test-cov-html.sh  test-files.sh  test.sh
sqlmodel/: __init__.py  _compat.py  compat.py  default.py  deferred_column.py  main.py  soft_delete.py  soft_delete_session.py  typing.py
sqlmodel-slim/: README.md
sqlmodel/cli/: __init__.py  migrations.py
sqlmodel/engine/: create.py  result.py
sqlmodel/orm/: session.py
sqlmodel/repository/: crud_repository.py
sqlmodel/sql/: _expression_select_cls.py  _expression_select_gen.py  _expression_select_gen.py.jinja2  _relationship_types.py  base.py  expression.py  expression.py.jinja2  pydantic_v1_json.py  pydantic_v2_json.py  sqltypes.py
tests/: conftest.py  test_aliases.py  test_annotated_relationship.py  test_annotated_sa_column.py  test_annotated_uuid.py  test_association_proxy_support.py  test_async.py  test_async_enhanced.py  test_async_fallback.py  test_attribute_keyed_dict.py  test_awaitable_field.py  test_column_property.py  test_column_property_deferred.py  test_create_model.py  test_declaration_syntax.py  test_default.py  test_deferred_column_simple.py  test_deprecations.py  test_descriptors.py  test_dict.py  test_dict_relationship_recursion.py  test_edge_cases.py  test_enums.py  test_enums_models.py  test_event_fallback.py  test_exec_text.py  test_field_description.py  test_field_info_metadata_hashable.py  test_field_json_schema_extra.py  test_field_newtype.py  test_field_pd_and_json_kwarrgs.py  test_field_sa_args_kwargs.py  test_field_sa_column.py  test_field_sa_column_mapped_column.py  test_field_sa_fk_args_kwargs.py  test_field_sa_relationship.py  test_field_sa_relationship_alias.py  test_field_sa_type.py  test_fields_set.py  test_forward_ref_conversion.py  (+56 more)
tests/issues/: test_74.py
tests/test_cli/: __init__.py  conftest.py  test_loader.py  test_migrations.py
tests/test_polymorphic/: test_basic.py  test_concrete.py  test_manytomany.py  test_poly_linked_list.py  test_poly_persistence.py  test_poly_query.py  test_poly_relationships.py  test_polymorphic_constructor.py  test_polymorphic_metaclass_helpers.py  test_polymorphic_typedecorator.py  test_schema.py  test_single.py
tests/test_pydantic/: test_field.py  test_generic.py  test_model_dump.py
(+638 files in other folders)
